summative.moria.Moria.scala.error
Erreur de compilation :
Moria:7: error: not found: value setPose
var x:Int=0; var y:Int=0; x=getX(); y=getY(); setPose((x+1), (y-1))} 
                                              ^