summative.moria.Moria.scala.code
while (!isBackingWall) 
{def fonce() {while ((!isOverBaggle)&&(!isBackingWall)) {backward()}}
def retraite() {while (!isOverBaggle) {forward()}}
def caselibre() {while (isOverBaggle) {backward()}}
 def pickbaggle() {if (isOverBaggle) {pickupBaggle()}; retraite(); caselibre(); dropBaggle; backward()};
 fonce(); if (isOverBaggle) {pickbaggle()}; if (!isBackingWall) {backward()}
var x:Int=0; var y:Int=0; x=getX(); y=getY(); setPose((x+1), (y-1))}